src/classes/pages/assets/style.css
/* ... */
.sidebar-mobile[open] {
    height: 80vh;
}

.sidebar-mobile[open] summary {
    top: 0;
    position: sticky;
    box-shadow: none;
    border-bottom: solid 1px var(--background-surface2);
}

.page-content {
    height: 100vh;
    max-height: initial;
    overflow: auto;
    width: 100%;
    padding-bottom: 4rem;
}

.sidebar-layout-wrapper {
    display: flex;
    height: 100vh;
    width: 100vw;
}

@media screen and (max-width: 800px) {
    .sidebar {
        display: none;
    }

    .sidebar-mobile {
        display: block;
    }
}

/* special elements */
hue,
sat,
lit,
theme,
comment {
    display: none;
}

hr + br {
    display: none;
}

r {
    /* row */
    display: block;
}

rf {
    /* row flow */
    display: flex;
    align-items: center;
}

br:not(.cm-line br) {
    display: block;
}

/* animations */
@keyframes FadeIn {
    0% {
        opacity: 0%;
    }

    25% {
        opacity: 25%;
    }

    50% {
        opacity: 50%;
    }

    75% {
        opacity: 75%;
    }

    100% {
        opacity: 100%;
    }
}

@keyframes FadeOut {
    0% {
        opacity: 100%;
    }

    25% {
        opacity: 75%;
    }

    50% {
        opacity: 50%;
    }

    75% {
        opacity: 25%;
    }

    100% {
        opacity: 0%;
    }
}

@keyframes Float {
    from {
        transform: translateY(0px);
    }

    50% {
        transform: translateY(-5px);
    }

    to {
        transform: translateY(0px);
    }
}

@keyframes Grow {
    from {
        transform: scale(0.95);
    }

    to {
        transform: scale(1);
    }
}

@keyframes GrowShrink {
    from {
        transform: scale(1);
    }

    50% {
        transform: scale(1.05);
    }

    to {
        transform: scale(1);
    }
}

@keyframes Blink {
    0% {
        opacity: 100%;
    }

    50% {
        opacity: 0%;
    }

    100% {
        opacity: 100%;
    }
}

@keyframes SlideInFromLeft {
    from {
        transform: translateX(-100%);
    }

    to {
        transform: translateX(0);
    }
}

/* stuff for builder */
.builder\:page {
    --AlignX: center;
    --AlignY: center;
    --Spacing: 10px;

    width: 100vw;
    height: 100vh;

    display: flex;
    flex-direction: column;
    gap: var(--Spacing);

    align-items: var(--AlignX);
    justify-content: var(--AlignY);
}

.builder\:text {
    --Size: 16px;
    --Weight: 400;
    --LineSpacing: 1.5;
    --LetterSpacing: 1;
    --Margins: 0.5rem;
    --Alignment: initial;

    font-size: var(--Size);
    font-weight: var(--Weight);
    line-height: var(--LineSpacing);
    letter-spacing: var(--LetterSpacing);
    margin: var(--Margins);
    text-align: var(--Alignment);
    font-size-adjust: none;
}

.builder\:card {
    --Background: var(--background-surface1);
    --Width: max-content;
    --Padding: 1rem;

    background: var(--Background);
    padding: var(--Padding);
    display: block;
    width: var(--Width);
    max-width: 100%;
    min-width: fit-content;
}

.builder\:toolbar {
    position: fixed;
    top: 0.5rem;
    right: 0.5rem;
    border-radius: 0.25rem;
    background: var(--background-surface1);
    display: flex;
    gap: 0.4rem;
    padding: 0.5rem;
    box-shadow: 0 0 4px var(--background-surface3);
    justify-content: center;
    align-items: center;
}

.builder\:toolbar button {
    border-radius: 0.25rem;
    background: var(--background-surface1);
}

.builder\:toolbar button:hover {
    background: var(--background-surface1-5a);
}

.builder\:sidebar {
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    width: 25rem;
    border-right: solid 1px var(--background-surface2);
    background: var(--background-surface1);
    display: flex;
    flex-direction: column;
    animation: SlideInFromLeft 0.15s 0s running;
    overflow: auto;
}

.builder\:sidebar button,
.option {
    width: 100%;
    padding: 0.5rem;
    border-bottom: solid 1px var(--background-surface2);
    display: flex;
    flex-direction: column;
    gap: 0.4rem;
}

.builder\:drag-element {
    position: relative;
}

.builder\:drag-zone {
    user-select: none;
    -webkit-user-select: none;
    width: 100%;
    position: absolute;
    padding: 0.5rem;
    display: none;
    height: 5px;
}

.builder\:drag-zone.top {
    border-top: dashed 2px var(--background-surface2);
    top: -10px;
}

.builder\:drag-zone.bottom {
    border-bottom: dashed 2px var(--background-surface2);
    bottom: -10px;
}

.builder\:drag-zone.active {
    border-color: var(--blue2);
    display: block;
}

.component {
    cursor: pointer;
}

.component.hover,
.component.active {
    outline: solid 2px var(--blue2);
}

.component h1 {
    width: 100%;
}

.component h1,
.component h2,
.component h3,
.component h4,
.component h5,
.component h6 {
    text-align: var(--Alignment);
}

.component * .htag {
    display: none;
}

@media screen and (max-width: 900px) {
    .builder\:toolbar {
        width: 100vw;
        top: 0;
        left: 0;
        border-radius: 0;
    }

    .builder\:sidebar {
        width: 100vw;
    }
}

